--- a/contact.html
+++ b/contact.html
@@ -325,16 +325,15 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="team.html">Team</a></li>
+                  <li><a href="team.html">About Us</a></li>
                   <li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Todos</a></li>
+                  
                   <li><a href="#">Events</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Downloads</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Get from the App Store</a></li>
                   <li><a href="#">Get from the Play Store</a></li>
                 </ul>
               </div>
