--- a/approch.html
+++ b/approch.html
@@ -63,19 +63,19 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="#features" class="nav-link">Features</a></li>
-                <li><a href="#price" class="nav-link">Pricing</a></li>
+                <li><a href="index.html#features" class="nav-link">Features</a></li>
+                <li><a href="pricing.html" class="nav-link">Pricing</a></li>
                 <li class="active"><a href="approch.html" class="nav-link">Approach</a></li>
 
                 <!--<li class="has-children">-->
-                <li><a href="#blog" class="nav-link">Blog</a>
+                <li><a href="blog.html" class="nav-link">Blog</a></li>
                   <!--<ul class="dropdown">
                     <li><a href="blog.html" class="nav-link">Blog</a></li>
                     <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>-->
                 </li>
                 
-                <li><a href="#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
+                <li><a href="index.html#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
                 <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
@@ -180,11 +180,7 @@
         <div class="row">
           <div class="col-md-4 mb-4 mb-md-0">
             <h3>About Gigly</h3>
-            <p>Gigly, where opportunity meets empowerment in the fast-paced world of AI. Whether you're a seasoned
-              freelancer or just dipping your toes into the gig economy, Gigly is your go-to platform for unlocking your
-              full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic
-              ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and
-              a vibrant community of fellow gig workers. Say hello to the future!</p>
+            <p>Gigly is your go-to platform for unlocking your full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers. Say hello to the future!</p>
             <p class="social">
               <a href="#"><span class="icofont-twitter"></span></a>
               <a href="#"><span class="icofont-facebook"></span></a>
@@ -206,16 +202,14 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="team.html">Team</a></li>
+                  <li><a href="team.html">About Us</a></li>
                   <li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Todos</a></li>
                   <li><a href="#">Events</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Downloads</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Get from the App Store</a></li>
                   <li><a href="#">Get from the Play Store</a></li>
                 </ul>
               </div>
@@ -225,7 +219,7 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-7">
-            <p class="copyright">&copy; Copyright Gigly. </p>
+            <p class="copyright">&copy; Copyright Gigly Tech Inc. </p>
             <div class="credits">
               <!--
                 All the links in the footer should remain intact.
