--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="#features" class="nav-link">Features</a></li>
-                <li><a href="#price" class="nav-link">Pricing</a></li>
+                <li><a href="index.html#features" class="nav-link">Features</a></li>
+                <li><a href="pricing.html" class="nav-link">Pricing</a></li>
                 <li><a href="approch.html" class="nav-link">Approach</a></li>
 
                 <!--<li class="has-children">-->
-                <li><a href="#blog" class="nav-link">Blog</a>
+                <li><a href="blog.html" class="nav-link">Blog</a></li>
                   <!--<ul class="dropdown">
                     <li><a href="blog.html" class="nav-link">Blog</a></li>
                     <li><a href="blog-single.html" class="nav-link">Blog Sigle</a></li>
                   </ul>-->
                 </li>
-                
-                <li><a href="#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
+
+                <li><a href="index.html#qr-code" class="btn btn-outline-white free-download">Free Download</a></li>
                 <!--<li><a href="contact.html" class="nav-link">Contact</a></li>-->
               </ul>
             </nav>
@@ -117,10 +117,11 @@
             <div class="col-12 hero-text-image">
               <div class="row">
                 <div class="col-lg-7 text-center text-lg-left">
-                  <h1 data-aos="fade-right"><span class="highlight-word">Supercharging</span> Gig Work Experience Everywhere</h1>
+                  <h1 data-aos="fade-right"><span class="highlight-word">Supercharging</span> Gig Work Experience
+                    Everywhere</h1>
                   <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Your All-in-One Solution for Earning,
                     Managing, and Connecting</p>
-                  <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#qr-code"
+                  <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="index.html#qr-code"
                       class="btn btn-outline-white">Free Download</a></p>
                 </div>
                 <div class="col-lg-5 iphone-wrap">
@@ -385,123 +386,85 @@
         </div>
       </div>
 
-    <!--SERVICE AREA-->
-    <section class="service-area section-padding" id="service">
-      <div class="container">
-          <div class="row flex-v-center">
-              <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                  <div class="single-service right wow fadeIn">
-                      <div class="service-icon">
-                          <div class="icon la la-users"></div>
-                      </div>
-                      <h4>Web Development</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-                  <div class="single-service right wow fadeIn">
-                      <div class="service-icon">
-                          <div class="i la la-camera"></div>
-                      </div>
-                      <h4>Photography</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-                  <div class="single-service right  wow fadeIn">
-                      <div class="service-icon">
-                          <div class="i la la-desktop"></div>
-                      </div>
-                      <h4>Web Design</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-                  <div class="single-service right mbzero wow fadeIn">
-                      <div class="service-icon">
-                          <div class="i la la-rocket"></div>
-                      </div>
-                      <h4>Web Development</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-              </div>
-              <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12 hidden-sm">
-                  <div class="service-image text-center wow fadeIn">
-                      <img src="img/service/service-mockup.png" alt="">
-                  </div>
-              </div>
-              <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
-                  <div class="single-service left wow fadeIn">
-                      <div class="service-icon">
-                          <div class="i la la-cog"></div>
-                      </div>
-                      <h4>Online Marketing</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-                  <div class="single-service left wow fadeIn">
-                      <div class="service-icon">
-                          <div class="i la la-bullhorn"></div>
-                      </div>
-                      <h4>Degital Media</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-                  <div class="single-service left  wow fadeIn">
-                      <div class="service-icon">
-                          <div class="i la la-cog"></div>
-                      </div>
-                      <h4>24/7 Support</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-                  <div class="single-service left mbzero wow fadeIn">
-                      <div class="service-icon">
-                          <div class="i la la-cog"></div>
-                      </div>
-                      <h4>24/7 Support</h4>
-                      <p>Budget CreatorsBudget CreatorsBudget CreatorsBudget</p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-  <!--SERVICE AREA END-->
-
-
-
-
-
-
-      <!--custom code for price-->
-      <div class="site-section" id="price">
+      <!--SERVICE AREA-->
+      <section class="service-area section-padding site-section border-top border-bottom" id="service">
         <div class="container">
-          <div class="row align-items-stretch">
-            <div class="col-lg-1 mb-0 mb-lg-0">
+          <div class="row justify-content-center text-center mb-5">
+            <div class="col-md-4">
+              <h2 class="section-heading">Features</h2>
             </div>
-            <div class="col-lg-5 mb-4 mb-lg-0">
-              <div class="pricing h-100 text-center">
-                <span>&nbsp;</span>
-                <h3>Basic</h3>
-                <ul class="list-unstyled">
-                  <li>Create up to 5 forms</li>
-                  <li>Generate 100 monthly reports</li>
-                </ul>
-                <div class="price-cta">
-                  <strong class="price">Free</strong>
-                  <p><a href="#" class="btn btn-white">Choose Plan</a></p>
+          </div>
+          <div class="row flex-v-center">
+            <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
+              <div class="single-service right wow fadeIn">
+                <div class="service-icon">
+                  <div class="icon la la-users"></div>
                 </div>
+                <h4>AI-driven Scheduler</h4>
+                <p>Optimize schedules based on preferences, earnings goals, and market data.</p>
+              </div>
+              <div class="single-service right wow fadeIn">
+                <div class="service-icon">
+                  <div class="i la la-camera"></div>
+                </div>
+                <h4>Personalized earning goal</h4>
+                <p>Providing a clear roadmap for achieving desired income levels.</p>
+              </div>
+              <div class="single-service right  wow fadeIn">
+                <div class="service-icon">
+                  <div class="i la la-desktop"></div>
+                </div>
+                <h4>Dynamic Marketplace</h4>
+                <p>A diverse range of promotions, and privileges for increased earnings.</p>
+              </div>
+              <div class="single-service right mbzero wow fadeIn">
+                <div class="service-icon">
+                  <div class="i la la-rocket"></div>
+                </div>
+                <h4>Networking and Collaboration</h4>
+                <p>Enabling collaboration, skill sharing, and support within the Gig community.</p>
               </div>
             </div>
-            <div class="col-lg-5 mb-4 mb-lg-0">
-              <div class="pricing h-100 text-center popular">
-                <span class="popularity">Most Popular</span>
-                <h3>Professional</h3>
-                <ul class="list-unstyled">
-                  <li>Create up to 20 forms</li>
-                  <li>Generate 2500 monthly reports</li>
-                  <li>Manage a team of up to 5 people</li>
-                </ul>
-                <div class="price-cta">
-                  <strong class="price">$9.95/month</strong>
-                  <p><a href="#" class="btn btn-white">Choose Plan</a></p>
+            <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12 hidden-sm">
+              <div class="service-image text-center wow fadeIn">
+                <img src="img/service/service-mockup.png" alt="">
+              </div>
+            </div>
+            <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
+              <div class="single-service left wow fadeIn">
+                <div class="service-icon">
+                  <div class="i la la-cog"></div>
                 </div>
+                <h4>Real-time Insights</h4>
+                <p>Actionable data and analytics to identify trends, and make informed decisions.</p>
+              </div>
+              <div class="single-service left wow fadeIn">
+                <div class="service-icon">
+                  <div class="i la la-bullhorn"></div>
+                </div>
+                <h4>Flexible Work Options</h4>
+                <p>Freedom to choose preferred work times personal lifestyle needs.</p>
+              </div>
+              <div class="single-service left  wow fadeIn">
+                <div class="service-icon">
+                  <div class="i la la-cog"></div>
+                </div>
+                <h4>Instant Cash Access</h4>
+                <p>Option for instant access to earned funds, or asset financing.</p>
+              </div>
+              <div class="single-service left mbzero wow fadeIn">
+                <div class="service-icon">
+                  <div class="i la la-cog"></div>
+                </div>
+                <h4>Continuous Improvement</h4>
+                <p>Incorporates technological advancements, ensuring a seamless and user-friendly experience.</p>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <!--SERVICE AREA END-->
+
       <!--custom code for price-->
 
       <!-- custom code for blogs-->
@@ -573,11 +536,10 @@
         <div class="row">
           <div class="col-md-4 mb-4 mb-md-0">
             <h3>About Gigly</h3>
-            <p>Gigly, where opportunity meets empowerment in the fast-paced world of AI. Whether you're a seasoned
-              freelancer or just dipping your toes into the gig economy, Gigly is your go-to platform for unlocking your
-              full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic
-              ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and
-              a vibrant community of fellow gig workers. Say hello to the future!</p>
+            <p>Gigly is your go-to platform for unlocking your full potential. With our intuitive AI-driven,
+              personalized tools, dynamic marketplace and futuristic ecosystem, Gigly streamlines your journey,
+              connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers.
+              Say hello to the future!</p>
             <p class="social">
               <a href="#"><span class="icofont-twitter"></span></a>
               <a href="#"><span class="icofont-facebook"></span></a>
@@ -599,16 +561,14 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
-                  <li><a href="team.html">Team</a></li>
+                  <li><a href="team.html">About Us</a></li>
                   <li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Todos</a></li>
                   <li><a href="#">Events</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Downloads</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Get from the App Store</a></li>
                   <li><a href="#">Get from the Play Store</a></li>
                 </ul>
               </div>
@@ -618,7 +578,7 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-7">
-            <p class="copyright">&copy; Copyright Gigly. </p>
+            <p class="copyright">&copy; Copyright Gigly Tech Inc. </p>
             <div class="credits">
               <!--
                 All the links in the footer should remain intact.
