--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       </div> <!-- .custom for your marketplace -->
 
 
-      <div class="site-section border-top border-bottom">
+      <div class="site-section">
         <div class="container">
           <div class="row justify-content-center text-center mb-5">
             <div class="col-md-4">
@@ -387,7 +387,7 @@
       </div>
 
       <!--SERVICE AREA-->
-      <section class="service-area section-padding site-section border-top border-bottom" id="service">
+      <section class="service-area section-padding site-section" id="service">
         <div class="container">
           <div class="row justify-content-center text-center mb-5">
             <div class="col-md-4">
@@ -468,7 +468,7 @@
       <!--custom code for price-->
 
       <!-- custom code for blogs-->
-      <div class="site-section" id="blog">
+      <div class="site-section border-top border-bottom" id="blog">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
