--- a/pricing.html
+++ b/pricing.html
@@ -398,18 +398,18 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Navigation</h3>
                 <ul class="list-unstyled">
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="pricing.html">Pricing</a></li>
+                  <li><a href="index.html#features">Features</a></li>
+                  <li><a href="blog.html">Blog</a></li>
+                  <!--<li><a href="#">Contact</a></li>-->
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Services</h3>
                 <ul class="list-unstyled">
                   <li><a href="team.html">About Us</a></li>
-                  <li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Events</a></li>
+                  <!--<li><a href="#">Collaboration</a></li>
+                  <li><a href="#">Events</a></li>-->
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
