--- a/blog-single.html
+++ b/blog-single.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.ico" rel="icon">
+  <link href="img/favicon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700|Roboto:300,400,700&display=swap" rel="stylesheet">
@@ -53,7 +53,9 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-lg-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="mb-0">Gigly</a></h1>
+            <a href="index.html" class="mb-0">
+              <img class="site-logo">
+            </a>
           </div>
 
           <div class="col-12 col-md-10 d-none d-lg-block">
@@ -63,7 +65,7 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="index.html#features" class="nav-link">Features</a></li>
                 <li><a href="index.html#price" class="nav-link">Pricing</a></li>
-                <li><a href="approch.html" class="nav-link">Approach</a></li>
+                <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
                 <!--<li class="has-children">-->
                 <li  class="active" ><a href="#" class="nav-link">Blog</a>
@@ -329,10 +331,10 @@
             <h3>About Gigly</h3>
             <p>Gigly is your go-to platform for unlocking your full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers. Say hello to the future!</p>
             <p class="social">
-              <a href="#"><span class="icofont-twitter"></span></a>
-              <a href="#"><span class="icofont-facebook"></span></a>
-              <a href="#"><span class="icofont-dribbble"></span></a>
-              <a href="#"><span class="icofont-behance"></span></a>
+              <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
+              <a href="https://www.linkedin.com/company/gigly4gig/"><span class="icofont-linkedin"></span></a>
+              <!--<a href="#"><span class="icofont-behance"></span></a>-->
             </p>
           </div>
           <div class="col-md-7 ml-auto">
@@ -350,8 +352,7 @@
                 <h3>Services</h3>
                 <ul class="list-unstyled">
                   <li><a href="team.html">About Us</a></li>
-                  <!--<li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Events</a></li>-->
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
