--- a/features.html
+++ b/features.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.ico" rel="icon">
+  <link href="img/favicon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700|Roboto:300,400,700&display=swap" rel="stylesheet">
@@ -294,10 +294,10 @@
             <h3>About SoftLand</h3>
             <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Eius ea delectus budget , numBudget Web creator aperiam Davinder nam optio Davinderm facilis itaque budget  recusandae creator minus animi.</p>
             <p class="social">
-              <a href="#"><span class="icofont-twitter"></span></a>
-              <a href="#"><span class="icofont-facebook"></span></a>
-              <a href="#"><span class="icofont-dribbble"></span></a>
-              <a href="#"><span class="icofont-behance"></span></a>
+              <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
+              <a href="https://www.linkedin.com/company/gigly4gig/"><span class="icofont-linkedin"></span></a>
+              <!--<a href="#"><span class="icofont-behance"></span></a>-->
             </p>
           </div>
           <div class="col-md-7 ml-auto">
