--- a/pricing.html
+++ b/pricing.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.ico" rel="icon">
+  <link href="img/favicon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700|Roboto:300,400,700&display=swap"
@@ -55,7 +55,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="mb-0">Gigly</a></h1>
+            <a href="index.html" class="mb-0">
+              <img class="site-logo">
+            </a>
           </div>
 
           <div class="col-12 col-md-10 d-none d-lg-block">
@@ -65,7 +67,7 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="index.html#features" class="nav-link">Features</a></li>
                 <li class="active"><a href="pricing.html" class="nav-link">Pricing</a></li>
-                <li><a href="approch.html" class="nav-link">Approach</a></li>
+                <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
                 <!--<li class="has-children">-->
                 <li><a href="blog.html" class="nav-link">Blog</a></li>
@@ -387,10 +389,10 @@
               connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers.
               Say hello to the future!</p>
             <p class="social">
-              <a href="#"><span class="icofont-twitter"></span></a>
-              <a href="#"><span class="icofont-facebook"></span></a>
-              <a href="#"><span class="icofont-dribbble"></span></a>
-              <a href="#"><span class="icofont-behance"></span></a>
+              <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
+              <a href="https://www.linkedin.com/company/gigly4gig/"><span class="icofont-linkedin"></span></a>
+              <!--<a href="#"><span class="icofont-behance"></span></a>-->
             </p>
           </div>
           <div class="col-md-7 ml-auto">
@@ -408,8 +410,7 @@
                 <h3>Services</h3>
                 <ul class="list-unstyled">
                   <li><a href="team.html">About Us</a></li>
-                  <!--<li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Events</a></li>-->
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
