--- a/team.html
+++ b/team.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.ico" rel="icon">
+  <link href="img/favicon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700|Roboto:300,400,700&display=swap"
@@ -55,7 +55,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="mb-0">Gigly</a></h1>
+            <a href="index.html" class="mb-0">
+              <img class="site-logo">
+            </a>
           </div>
 
           <div class="col-12 col-md-10 d-none d-lg-block">
@@ -65,7 +67,7 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="index.html#features" class="nav-link">Features</a></li>
                 <li><a href="pricing.html" class="nav-link">Pricing</a></li>
-                <li><a href="approch.html" class="nav-link">Approach</a></li>
+                <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
                 <!--<li class="has-children">-->
                 <li><a href="blog.html" class="nav-link">Blog</a></li>
@@ -128,6 +130,41 @@
 
       </div>
 
+      <div class="site-section pb-0">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4 mr-auto">
+              <h2 class="mb-4"><a href="#">AI based schedule optimization</a></h2>
+              <p class="mb-4">A streamlined solution to maximize earnings and optimize work schedules. Gigly's AI
+                scheduler intelligently identifies the most advantageous opportunities to meet your goals. Leveraging
+                data, the scheduler dynamically adjusts schedules. you now can achieve your financial goal flexibily and
+                work-life balance. Automatic syncing with your calendar ensures zero effort in planning.</p>
+              <!--<p><a href="#">Download Now</a></p>-->
+            </div>
+            <div class="col-md-6 aos-init aos-animate" data-aos="fade-left">
+              <img src="img/undraw_svg_2.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="site-section">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-4 ml-auto order-2">
+              <h2 class="mb-4"><a href="#">Insights and alerts</a></h2>
+              <p class="mb-4">Gigly ensures updated demand insights and alerts to optimize your work decisions. you can
+                also personalize Gigly as your work assistant and get alerts and insights ensures you moving towards
+                your financial and efficiency goals.</p>
+              <!--<p><a href="#">Download Now</a></p>-->
+            </div>
+            <div class="col-md-6 aos-init aos-animate" data-aos="fade-right">
+              <img src="img/undraw_svg_3.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="site-section team">
         <div class="container">
 
@@ -151,8 +188,8 @@
                 <h3 class="mb-3">Walter White</h3>
                 <p>Chief Executive Officer</p>
                 <p class="social">
-                  <a href="#"><span class="icofont-twitter"></span></a>
-                  <a href="#"><span class="icofont-facebook"></span></a>
+                  <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+                  <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
                 </p>
@@ -167,8 +204,8 @@
                 <h3 class="mb-3">Sarah Jhinson</h3>
                 <p>Product Manager</p>
                 <p class="social">
-                  <a href="#"><span class="icofont-twitter"></span></a>
-                  <a href="#"><span class="icofont-facebook"></span></a>
+                  <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+                  <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
                 </p>
@@ -183,8 +220,8 @@
                 <h3 class="mb-3">William Anderson</h3>
                 <p>CTO</p>
                 <p class="social">
-                  <a href="#"><span class="icofont-twitter"></span></a>
-                  <a href="#"><span class="icofont-facebook"></span></a>
+                  <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+                  <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
                 </p>
@@ -218,10 +255,10 @@
             <h3>About Gigly</h3>
             <p>Gigly is your go-to platform for unlocking your full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers. Say hello to the future!</p>
             <p class="social">
-              <a href="#"><span class="icofont-twitter"></span></a>
-              <a href="#"><span class="icofont-facebook"></span></a>
-              <a href="#"><span class="icofont-dribbble"></span></a>
-              <a href="#"><span class="icofont-behance"></span></a>
+              <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
+              <a href="https://www.linkedin.com/company/gigly4gig/"><span class="icofont-linkedin"></span></a>
+              <!--<a href="#"><span class="icofont-behance"></span></a>-->
             </p>
           </div>
           <div class="col-md-7 ml-auto">
@@ -239,8 +276,7 @@
                 <h3>Services</h3>
                 <ul class="list-unstyled">
                   <li class="active"><a href="team.html">About Us</a></li>
-                  <!--<li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Events</a></li>-->
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
