--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.ico" rel="icon">
+  <link href="img/favicon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700|Roboto:300,400,700&display=swap"
@@ -54,7 +54,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="mb-0">Gigly</a></h1>
+            <a href="index.html" class="mb-0">
+              <img class="site-logo">
+            </a>
           </div>
 
           <div class="col-12 col-md-10 d-none d-lg-block">
@@ -64,7 +66,7 @@
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="index.html#features" class="nav-link">Features</a></li>
                 <li><a href="pricing.html" class="nav-link">Pricing</a></li>
-                <li><a href="approch.html" class="nav-link">Approach</a></li>
+                <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
                 <!--<li class="has-children">-->
                 <li><a href="blog.html" class="nav-link">Blog</a></li>
@@ -135,7 +137,7 @@
 
       </div>
 
-      <div class="site-section" id="features">
+      <div class="site-section" id="community">
         <div class="container">
 
           <div class="row justify-content-center text-center mb-5">
@@ -148,7 +150,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
-                  <span class="icon la la-users"></span>
+                  <span class="icon la la-hand-holding-usd"></span>
                 </div>
                 <h3 class="mb-3">Earn More in Less</h3>
                 <p>Gigly's AI scheduler optimizes your schedule for maximum earnings and adjusts for missed
@@ -158,7 +160,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
-                  <span class="icon la la-toggle-off"></span>
+                  <span class="icon la la-balance-scale"></span>
                 </div>
                 <h3 class="mb-3">Manage Your Finance</h3>
                 <p>Sync your earnings from all platforms, expenses, instant cash or finance all in one place.</p>
@@ -167,7 +169,7 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
-                  <span class="icon la la-umbrella"></span>
+                  <span class="icon la la-store-alt"></span>
                 </div>
                 <h3 class="mb-3">A marketplace of goodies</h3>
                 <p>Exclusive discount and offers for your work and lifestyle choices - and connect with all privilege
@@ -198,11 +200,11 @@
         </div>
       </div>
       <!--QR-CODE-Custom-->
-      <div class="site-section">
+      <div class="site-section" style="padding-top: 15px;">
         <div class="container">
           <div class="row justify-content-center text-center mb-5" data-aos="fade">
-            <div class="col-md-6 mb-5">
-              <img src="img/undraw_svg_1.svg" alt="Image" class="img-fluid">
+            <div class="col-md-8 mb-5">
+              <img src="img/undraw_svg_1.png" alt="Image" class="img-fluid">
             </div>
           </div>
 
@@ -246,7 +248,7 @@
               <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6" data-aos="fade-left">
-              <img src="img/undraw_svg_2.svg" alt="Image" class="img-fluid">
+              <img src="img/undraw_svg_2.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
@@ -263,7 +265,7 @@
               <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6" data-aos="fade-right">
-              <img src="img/undraw_svg_3.svg" alt="Image" class="img-fluid">
+              <img src="img/undraw_svg_3.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
@@ -282,7 +284,7 @@
               <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6" data-aos="fade-left">
-              <img src="img/undraw_svg_2.svg" alt="Image" class="img-fluid">
+              <img src="img/undraw_svg_5.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
@@ -384,10 +386,12 @@
             </div>
           </div>
         </div>
+        <div  id="features"></div>
       </div>
 
       <!--SERVICE AREA-->
-      <section class="service-area section-padding site-section" id="service">
+      
+      <section class="service-area section-padding site-section">
         <div class="container">
           <div class="row justify-content-center text-center mb-5">
             <div class="col-md-4">
@@ -398,28 +402,28 @@
             <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
               <div class="single-service right wow fadeIn">
                 <div class="service-icon">
-                  <div class="icon la la-users"></div>
+                  <div class="icon la la-calendar"></div>
                 </div>
                 <h4>AI-driven Scheduler</h4>
                 <p>Optimize schedules based on preferences, earnings goals, and market data.</p>
               </div>
               <div class="single-service right wow fadeIn">
                 <div class="service-icon">
-                  <div class="i la la-camera"></div>
+                  <div class="i la la-money-check-alt"></div>
                 </div>
                 <h4>Personalized earning goal</h4>
                 <p>Providing a clear roadmap for achieving desired income levels.</p>
               </div>
               <div class="single-service right  wow fadeIn">
                 <div class="service-icon">
-                  <div class="i la la-desktop"></div>
+                  <div class="i la la-store-alt"></div>
                 </div>
                 <h4>Dynamic Marketplace</h4>
                 <p>A diverse range of promotions, and privileges for increased earnings.</p>
               </div>
               <div class="single-service right mbzero wow fadeIn">
                 <div class="service-icon">
-                  <div class="i la la-rocket"></div>
+                  <div class="i la la-share-alt"></div>
                 </div>
                 <h4>Networking and Collaboration</h4>
                 <p>Enabling collaboration, skill sharing, and support within the Gig community.</p>
@@ -433,28 +437,28 @@
             <div class="col-md-4 col-lg-4 col-sm-6 col-xs-12">
               <div class="single-service left wow fadeIn">
                 <div class="service-icon">
-                  <div class="i la la-cog"></div>
+                  <div class="i la la-chart-bar"></div>
                 </div>
                 <h4>Real-time Insights</h4>
                 <p>Actionable data and analytics to identify trends, and make informed decisions.</p>
               </div>
               <div class="single-service left wow fadeIn">
                 <div class="service-icon">
-                  <div class="i la la-bullhorn"></div>
+                  <div class="i la la-business-time"></div>
                 </div>
                 <h4>Flexible Work Options</h4>
                 <p>Freedom to choose preferred work times personal lifestyle needs.</p>
               </div>
               <div class="single-service left  wow fadeIn">
                 <div class="service-icon">
-                  <div class="i la la-cog"></div>
+                  <div class="i la la-coins"></div>
                 </div>
                 <h4>Instant Cash Access</h4>
                 <p>Option for instant access to earned funds, or asset financing.</p>
               </div>
               <div class="single-service left mbzero wow fadeIn">
                 <div class="service-icon">
-                  <div class="i la la-cog"></div>
+                  <div class="i la la-chalkboard"></div>
                 </div>
                 <h4>Continuous Improvement</h4>
                 <p>Incorporates technological advancements, ensuring a seamless and user-friendly experience.</p>
@@ -541,10 +545,10 @@
               connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers.
               Say hello to the future!</p>
             <p class="social">
-              <a href="#"><span class="icofont-twitter"></span></a>
-              <a href="#"><span class="icofont-facebook"></span></a>
-              <a href="#"><span class="icofont-dribbble"></span></a>
-              <a href="#"><span class="icofont-behance"></span></a>
+              <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
+              <a href="https://www.linkedin.com/company/gigly4gig/"><span class="icofont-linkedin"></span></a>
+              <!--<a href="#"><span class="icofont-behance"></span></a>-->
             </p>
           </div>
           <div class="col-md-7 ml-auto">
@@ -562,8 +566,7 @@
                 <h3>Services</h3>
                 <ul class="list-unstyled">
                   <li><a href="team.html">About Us</a></li>
-                  <!--<li><a href="#">Collaboration</a></li>
-                  <li><a href="#">Events</a></li>-->
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
