--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <div class="site-section">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-4 ml-auto order-2">
+            <div class="col-md-4 ml-auto order-2 reload-class">
               <h2 class="mb-4"><a href="#">Insights and alerts</a></h2>
               <p class="mb-4">Gigly ensures updated demand insights and alerts to optimize your work decisions. you can
                 also personalize Gigly as your work assistant and get alerts and insights ensures you moving towards
