--- a/features.html
+++ b/features.html
@@ -294,9 +294,9 @@
             <h3>About SoftLand</h3>
             <p>Davinder Singh Davinder Singh, budget Web creator adipisicing budget . Eius ea delectus budget , numBudget Web creator aperiam Davinder nam optio Davinderm facilis itaque budget  recusandae creator minus animi.</p>
             <p class="social">
-              <a href="https://twitter.com/Gigly4Gig"><span class="icofont-twitter"></span></a>
-              <a href="https://www.facebook.com/profile.php?id=61558521376687"><span class="icofont-facebook"></span></a>
-              <a href="https://www.linkedin.com/company/gigly4gig/"><span class="icofont-linkedin"></span></a>
+              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
+              <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
               <!--<a href="#"><span class="icofont-behance"></span></a>-->
             </p>
           </div>
