--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="index.html#features" class="nav-link">Features</a></li>
+                <li><a href="#features" class="nav-link">Features</a></li>
                 <li><a href="pricing.html" class="nav-link">Pricing</a></li>
                 <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
