--- a/blog-single-3.html
+++ b/blog-single-3.html
@@ -121,7 +121,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 text-center hero-text">
                   <h1 data-aos="fade-up" data-aos-delay="">Gig Life in Asia: Gigly Empowers Indian Workers to Conquer Challenges!</h1>
-                  <p class="mb-5" data-aos="fade-up" data-aos-delay="100">April 24,
+                  <p class="mb-5" data-aos="fade-up" data-aos-delay="100">April 12,
                     2024<!--&bullet; By <a href="#" class="text-white">Admin</a>--></p>
                 </div>
               </div>
@@ -209,7 +209,7 @@
                 <p><b>#Gigly #GigEconomy #FutureofWork #AI #FinancialEmpowerment</b></p>
               </div>
 
-              <p><b>Bonus: </b>Consider including a compelling graph or image highlighting the growth of the gig economy in India, or the gap between gig workers and traditional financial services. You can find free charts and graphs on websites like <a href="https://www.freepik.com/">FreePik</a> or <a href="https://www.canva.com/">Canva</a>.</p>
+              <!--<p><b>Bonus: </b>Consider including a compelling graph or image highlighting the growth of the gig economy in India, or the gap between gig workers and traditional financial services. You can find free charts and graphs on websites like <a href="https://www.freepik.com/">FreePik</a> or <a href="https://www.canva.com/">Canva</a>.</p>-->
             </div>
             <!--<div class="col-md-4 sidebar">
               <div class="sidebar-box">
