--- a/blog-single-4.html
+++ b/blog-single-4.html
@@ -121,7 +121,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 text-center hero-text">
                   <h1 data-aos="fade-up" data-aos-delay="">Gig Smarter, Not Harder: Gigly's AI Scheduler Empowers You with Flexibility and Tech Power</h1>
-                  <p class="mb-5" data-aos="fade-up" data-aos-delay="100">April 23,
+                  <p class="mb-5" data-aos="fade-up" data-aos-delay="100">April 19,
                     2024<!--&bullet; By <a href="#" class="text-white">Admin</a>--></p>
                 </div>
               </div>
@@ -218,8 +218,8 @@
                 <p><b>#Gigly #GigEconomy #FutureofWork #AI #Flexibility #MaximizeEarnings</b></p>
               </div>
 
-              <p><b>Bonus: </b>Consider including a visually appealing graphic or infographic showcasing the AI Scheduler's functionalities. You can find design resources on websites like <a href="https://www.freepik.com/">FreePik</a> or <a href="https://www.canva.com/">Canva</a>.</p>
-
+              <!--<p><b>Bonus: </b>Consider including a visually appealing graphic or infographic showcasing the AI Scheduler's functionalities. You can find design resources on websites like <a href="https://www.freepik.com/">FreePik</a> or <a href="https://www.canva.com/">Canva</a>.</p>
+              -->
             </div>
             <!--<div class="col-md-4 sidebar">
               <div class="sidebar-box">
