--- a/contact.html
+++ b/contact.html
@@ -259,6 +259,13 @@
                 <h3>Downloads</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">Get from the Play Store</a></li>
+                  <li>
+                    <div>
+                      <input type="email" name="email">
+                      <input onclick="subscribe()" class="btn btn-primary d-block w-100" name="subscribe"
+                    value="Subscribe">
+                    </div>
+                  </li>
                 </ul>
               </div>
             </div>
