--- a/blog.html
+++ b/blog.html
@@ -116,7 +116,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-7 text-center hero-text">
                   <h1 data-aos="fade-up" data-aos-delay="">Blog Posts</h1>
-                  <p class="mb-5" data-aos="fade-up"  data-aos-delay="100">Davinder Singh Davinder Singh, budget Web creator adipisicing budget .</p>  
+                  <p class="mb-5" data-aos="fade-up"  data-aos-delay="100">Empowering Your Gig Hustle with AI & Community, Insights & Strategies for the Modern Gig Worker</p>  
                 </div>
               </div>
             </div>
