--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
           </div>
 
           <div class="row">
-            <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
+            <div class="col-md-5 ml-auto order-2" data-aos="fade-up">
               <ul class="list-unstyled">
                 <li class="mb-3">
                   <strong class="d-block mb-1">Address</strong>
@@ -160,7 +160,7 @@
               <div>
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d719098.0947965231!2d-76.45968298537!3d45.2482592204198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b25f5113af%3A0x8a6a51e131dd15ed!2sOttawa%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sin!4v1714310000937!5m2!1sen!2sin"
-                  width="300" height="260" style="border:0;" allowfullscreen="" loading="lazy"
+                  width="350" height="260" style="border:0;" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
@@ -229,7 +229,7 @@
               connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers.
               Say hello to the future!</p>
             <p class="social">
-              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
               <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span
                   class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span
@@ -259,13 +259,6 @@
                 <h3>Downloads</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">Get from the Play Store</a></li>
-                  <li>
-                    <div>
-                      <input type="email" name="email">
-                      <input onclick="subscribe()" class="btn btn-primary d-block w-100" name="subscribe"
-                    value="Subscribe">
-                    </div>
-                  </li>
                 </ul>
               </div>
             </div>
