--- a/team.html
+++ b/team.html
@@ -133,12 +133,13 @@
       <div class="site-section pb-0">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-4 mr-auto">
-              <h2 class="mb-4"><a href="#">AI based schedule optimization</a></h2>
-              <p class="mb-4">A streamlined solution to maximize earnings and optimize work schedules. Gigly's AI
-                scheduler intelligently identifies the most advantageous opportunities to meet your goals. Leveraging
-                data, the scheduler dynamically adjusts schedules. you now can achieve your financial goal flexibily and
-                work-life balance. Automatic syncing with your calendar ensures zero effort in planning.</p>
+            <div class="col-md-6 mr-auto">
+              <h2 class="mb-4">About Us</h2>
+              <p class="mb-4">Gigly: Your AI-Powered Partner in the Gig Economy<br/>
+                Gigly is more than just a platform – it's a revolution in the way gig workers manage their careers and achieve financial success.  We're a passionate team of individuals with extensive experience in technology, finance, and the global gig economy. We share a common goal:  to empower gig workers and unlock their full potential. Our team includes: We believe in the power of technology to change the game for gig workers, and we're committed to providing you with the tools and resources you need to achieve your financial goals and thrive!
+                <br/>
+                Ready to unlock your full potential? Sign up today and experience the Gigly difference!
+              </p>
               <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6 aos-init aos-animate" data-aos="fade-left">
@@ -152,10 +153,10 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-4 ml-auto order-2 reload-class">
-              <h2 class="mb-4"><a href="#">Insights and alerts</a></h2>
-              <p class="mb-4">Gigly ensures updated demand insights and alerts to optimize your work decisions. you can
-                also personalize Gigly as your work assistant and get alerts and insights ensures you moving towards
-                your financial and efficiency goals.</p>
+              <h2 class="mb-4">Our Mission</h2>
+              <p class="mb-4">Gigly: Empowering gig workers to thrive with AI-powered tools and a supportive community.<br/>
+                We understand the challenges you face: juggling multiple platforms, finding high-paying gigs, and managing finances can be a constant struggle.
+              </p>
               <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6 aos-init aos-animate" data-aos="fade-right">
@@ -179,20 +180,21 @@
           </div>
 
           <div class="row">
+            <div class="col-md-2"></div>
             <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
                   <img src="img/team/member-1.jpg" alt="">
                   <span class="icon"></span>
                 </div>
-                <h3 class="mb-3">Walter White</h3>
-                <p>Chief Executive Officer</p>
+                <h3 class="mb-3">Saif Rashid</h3>
+                <!--<p>Chief Executive Officer</p>
                 <p class="social">
                   <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
                   <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
-                </p>
+                </p>-->
               </div>
             </div>
             <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
@@ -201,17 +203,17 @@
                   <img src="img/team/member-2.jpg" alt="">
                   <span class="icon"></span>
                 </div>
-                <h3 class="mb-3">Sarah Jhinson</h3>
-                <p>Product Manager</p>
+                <h3 class="mb-3">N.S. Yadav</h3>
+                <!--<p>Product Manager</p>
                 <p class="social">
                   <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
                   <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
-                </p>
+                </p>-->
               </div>
             </div>
-            <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+            <!--  <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
               <div class="feature-1 text-center">
                 <div class="wrap-icon icon-1">
                   <img src="img/team/member-3.jpg" alt="">
@@ -226,7 +228,7 @@
                   <a href="#"><span class="icofont-linkedin"></span></a>
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
 
         </div>
