--- a/approch.html
+++ b/approch.html
@@ -184,7 +184,7 @@
             <h3>About Gigly</h3>
             <p>Gigly is your go-to platform for unlocking your full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers. Say hello to the future!</p>
             <p class="social">
-              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
               <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
               <!--<a href="#"><span class="icofont-behance"></span></a>-->
