--- a/blog-single-3.html
+++ b/blog-single-3.html
@@ -252,7 +252,7 @@
               connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers.
               Say hello to the future!</p>
             <p class="social">
-              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
               <a href="https://www.facebook.com/profile.php?id=61558521376687"><span
                   class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
