--- a/team.html
+++ b/team.html
@@ -190,7 +190,7 @@
                 <h3 class="mb-3">Saif Rashid</h3>
                 <!--<p>Chief Executive Officer</p>
                 <p class="social">
-                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
                   <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
@@ -206,7 +206,7 @@
                 <h3 class="mb-3">N.S. Yadav</h3>
                 <!--<p>Product Manager</p>
                 <p class="social">
-                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
                   <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
@@ -222,7 +222,7 @@
                 <h3 class="mb-3">William Anderson</h3>
                 <p>CTO</p>
                 <p class="social">
-                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
                   <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
                   <a href="#"><span class="icofont-linkedin"></span></a>
@@ -257,7 +257,7 @@
             <h3>About Gigly</h3>
             <p>Gigly is your go-to platform for unlocking your full potential. With our intuitive AI-driven, personalized tools, dynamic marketplace and futuristic ecosystem, Gigly streamlines your journey, connecting you with high-paying gigs, exclusive promotions, and a vibrant community of fellow gig workers. Say hello to the future!</p>
             <p class="social">
-              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-twitter"></span></a>
+              <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
               <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
               <!--<a href="#"><span class="icofont-behance"></span></a>-->
