--- a/blog-single-4.html
+++ b/blog-single-4.html
@@ -166,14 +166,9 @@
               </ul>
 
               <div class="row mb-5">
-                <div class="col-md-6">
-                  <figure><img src="img/img_1.jpg" alt="Free Website  Free-Template.co" class="img-fluid">
-                    <figcaption>This is an image caption</figcaption>
-                  </figure>
-                </div>
-                <div class="col-md-6">
-                  <figure><img src="img/img_2.jpg" alt="Free Website  Free-Template.co" class="img-fluid">
-                    <figcaption>This is an image caption</figcaption>
+                <div class="col-md-12">
+                  <figure><img src="img/blog/blog-4.png" alt="Gigly" class="img-fluid">
+                    <!--<figcaption>This is an image caption</figcaption>-->
                   </figure>
                 </div>
               </div>
