--- a/team.html
+++ b/team.html
@@ -143,7 +143,7 @@
               <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6 aos-init aos-animate" data-aos="fade-left">
-              <img src="img/undraw_svg_2.png" alt="Image" class="img-fluid">
+              <img src="img/about-us.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
@@ -160,7 +160,7 @@
               <!--<p><a href="#">Download Now</a></p>-->
             </div>
             <div class="col-md-6 aos-init aos-animate" data-aos="fade-right">
-              <img src="img/undraw_svg_3.png" alt="Image" class="img-fluid">
+              <img src="img/our-mission.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
