--- a/blog-single-1.html
+++ b/blog-single-1.html
@@ -145,14 +145,9 @@
                 maximizing your earnings and optimizing your gig life.</p>
 
               <div class="row mb-5">
-                <div class="col-md-6">
-                  <figure><img src="img/img_1.jpg" alt="Free Website  Free-Template.co" class="img-fluid">
-                    <figcaption>This is an image caption</figcaption>
-                  </figure>
-                </div>
-                <div class="col-md-6">
-                  <figure><img src="img/img_2.jpg" alt="Free Website  Free-Template.co" class="img-fluid">
-                    <figcaption>This is an image caption</figcaption>
+                <div class="col-md-12">
+                  <figure><img src="img/blog/blog-1.png" alt="Gigly" class="img-fluid">
+                    <!--<figcaption>This is an image caption</figcaption>-->
                   </figure>
                 </div>
               </div>
