--- a/team.html
+++ b/team.html
@@ -188,13 +188,13 @@
                   <span class="icon"></span>
                 </div>
                 <h3 class="mb-3">Saif Rashid</h3>
-                <!--<p>Chief Executive Officer</p>
+                <!--<p>Chief Executive Officer</p>-->
                 <p class="social">
-                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
-                  <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
+                  <a href="https://www.linkedin.com/in/saif-rashid" target="_blank"><span class="icofont-linkedin"></span></a>
+                 <!-- <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
                   <a href="#"><span class="icofont-google-plus"></span></a>
-                  <a href="#"><span class="icofont-linkedin"></span></a>
-                </p>-->
+                  <a href="#"><span class="icofont-linkedin"></span></a>-->
+                </p>
               </div>
             </div>
             <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
@@ -204,13 +204,12 @@
                   <span class="icon"></span>
                 </div>
                 <h3 class="mb-3">N.S. Yadav</h3>
-                <!--<p>Product Manager</p>
+                <!--<p>Product Manager</p>-->
                 <p class="social">
                   <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
                   <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
-                  <a href="#"><span class="icofont-google-plus"></span></a>
-                  <a href="#"><span class="icofont-linkedin"></span></a>
-                </p>-->
+                  <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
+                </p>
               </div>
             </div>
             <!--  <div class="col-md-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
