--- a/features.html
+++ b/features.html
@@ -62,7 +62,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li class="active"><a href="features.html" class="nav-link">Features</a></li>
-                <li><a href="pricing.html" class="nav-link">Pricing</a></li>
+                <li><a href="pricing" class="nav-link">Pricing</a></li>
                 
                 <li class="has-children">
                   <a href="blog" class="nav-link">Blog</a>
