--- a/approch.html
+++ b/approch.html
@@ -195,7 +195,7 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Navigation</h3>
                 <ul class="list-unstyled">
-                  <li><a href="pricing.html">Pricing</a></li>
+                  <li><a href="pricing">Pricing</a></li>
                   <li><a href="index.html#features">Features</a></li>
                   <li><a href="blog">Blog</a></li>
                   <!--<li><a href="#">Contact</a></li>-->
