--- a/blog-single-2.html
+++ b/blog-single-2.html
@@ -66,7 +66,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="index.html#features" class="nav-link">Features</a></li>
-                <li><a href="pricing.html" class="nav-link">Pricing</a></li>
+                <li><a href="pricing" class="nav-link">Pricing</a></li>
                 <!--<li><a href="approch.html" class="nav-link">Approach</a></li>-->
 
                 <!--<li class="has-children">-->
@@ -259,7 +259,7 @@
               <div class="col-md-4 mb-4 mb-md-0">
                 <h3>Navigation</h3>
                 <ul class="list-unstyled">
-                  <li><a href="pricing.html">Pricing</a></li>
+                  <li><a href="pricing">Pricing</a></li>
                   <li><a href="index.html#features">Features</a></li>
                   <li><a href="blog">Blog</a></li>
                   <!--<li><a href="#">Contact</a></li>-->
