--- a/team.html
+++ b/team.html
@@ -301,7 +301,7 @@
     </footer>
   </div> <!-- .site-wrap -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <a href="#" class="back-to-top"><i class="icon la la-angle-up"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="vendor/jquery/jquery.min.js"></script>
