--- a/blog-single-5.html
+++ b/blog-single-5.html
@@ -252,7 +252,7 @@
               <a href="https://www.facebook.com/profile.php?id=61558521376687"><span
                   class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
-              <!--<a href="#"><span class="icofont-behance"></span></a>-->
+              <a href="https://www.instagram.com/gigly4gig?igsh=MWozNDF2ZDc2aDJhZw==" target="_blank"><span class="icofont-instagram"></span></a>
             </p>
           </div>
           <div class="col-md-7 ml-auto">
