--- a/index.html
+++ b/index.html
@@ -303,11 +303,11 @@
               <div class="owl-carousel testimonial-carousel">
                 <div class="review text-center">
                   <p class="stars">
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
                   </p>
                   <h3>Gigly has been a game-changer!</h3>
                   <blockquote>
@@ -327,11 +327,11 @@
 
                 <div class="review text-center">
                   <p class="stars">
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star muted"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star muted"></span>
                   </p>
                   <h3>Gigly is a great platform overall</h3>
                   <blockquote>
@@ -352,11 +352,11 @@
 
                 <div class="review text-center">
                   <p class="stars">
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star"></span>
-                    <span class="icofont-star "></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star"></span>
+                    <span class="icon la la-star "></span>
                   </p>
                   <h3>I love that Gigly feels built specifically for gig workers like me</h3>
                   <blockquote>
@@ -544,7 +544,7 @@
               <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
               <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
-              <!--<a href="#"><span class="icofont-behance"></span></a>-->
+              <a href="https://www.instagram.com/gigly4gig?igsh=MWozNDF2ZDc2aDJhZw==" target="_blank"><span class="icofont-instagram"></span></a>
             </p>
           </div>
           <div class="col-md-7 ml-auto">
