--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,7 @@
                   class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span
                   class="icofont-linkedin"></span></a>
-              <!--<a href="#"><span class="icofont-behance"></span></a>-->
+              <a href="https://www.instagram.com/gigly4gig?igsh=MWozNDF2ZDc2aDJhZw==" target="_blank"><span class="icofont-instagram"></span></a>
             </p>
           </div>
           <div class="col-md-7 ml-auto">
