--- a/pricing.html
+++ b/pricing.html
@@ -392,7 +392,7 @@
               <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
               <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
               <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
-              <!--<a href="#"><span class="icofont-behance"></span></a>-->
+              <a href="https://www.instagram.com/gigly4gig?igsh=MWozNDF2ZDc2aDJhZw==" target="_blank"><span class="icofont-instagram"></span></a>
             </p>
           </div>
           <div class="col-md-7 ml-auto">
