--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@
               <h2>Upgrade Your <span class="highlight-word">Gigly</span> Journey</h2>
             </div>
             <div class="col-md-5 text-center text-md-right">
-              <p><a href="#" class="btn"><span class="icofont-brand-apple mr-3"></span>App store</a> <a href="#"
-                  class="btn"><span class="icofont-ui-play mr-3"></span>Google play</a></p>
+              <p><a href="#" class="btn"><span class="icon la la-apple mr-3"></span>App store</a> <a href="#"
+                  class="btn"><span class="icon la la-play mr-3"></span>Google play</a></p>
             </div>
           </div>
         </div>
