--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,16 @@
     Author: BootstrapMade.com
     Author URL: https://bootstrapmade.com/
   ======================================================= -->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8QNF5DRCFQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8QNF5DRCFQ');
+</script>
+<meta name="google-adsense-account" content="ca-pub-9390100890086016">
 </head>
 
 <body>
