--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
   gtag('config', 'G-8QNF5DRCFQ');
 </script>
+<meta name="google-adsense-account" content="ca-pub-9390100890086016">
 </head>
 
 <body>
