--- a/pricing.html
+++ b/pricing.html
@@ -377,7 +377,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 mr-auto text-center text-md-left mb-5 mb-md-0">
-              <h2>Starts Publishing Your Apps</h2>
+              <h2>Download Gigly  Today</h2>
             </div>
             <div class="col-md-5 text-center text-md-right">
               <p><a href="#" class="btn"><span class="icon la la-apple mr-3"></span>App store</a> <a href="#"
@@ -424,10 +424,10 @@
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
-                <h3>Downloads</h3>
+                <!--<h3>Downloads</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">Get from the Play Store</a></li>
-                </ul>
+                </ul>-->
               </div>
             </div>
           </div>
