--- a/team.html
+++ b/team.html
@@ -198,7 +198,7 @@
                   <span class="icon"></span>
                 </div>
                 <h3 class="mb-3">Saif Rashid</h3>
-                <!--<p>Chief Executive Officer</p>-->
+                <p>Founder</p>
                 <p class="social">
                   <a href="https://www.linkedin.com/in/saif-rashid" target="_blank"><span class="icofont-linkedin"></span></a>
                  <!-- <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
@@ -214,11 +214,11 @@
                   <span class="icon"></span>
                 </div>
                 <h3 class="mb-3">N.S. Yadav</h3>
-                <!--<p>Product Manager</p>-->
+                <p>Co-Founder</p>
                 <p class="social">
-                  <a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
+                  <!--<a href="https://twitter.com/Gigly4Gig" target="_blank"><span class="icofont-x"></span></a>
                   <a href="https://www.facebook.com/profile.php?id=61558521376687" target="_blank"><span class="icofont-facebook"></span></a>
-                  <a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
+                  --><a href="https://www.linkedin.com/company/gigly4gig/" target="_blank"><span class="icofont-linkedin"></span></a>
                 </p>
               </div>
             </div>
@@ -291,10 +291,10 @@
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
-                <h3>Downloads</h3>
+                <!--<h3>Downloads</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">Get from the Play Store</a></li>
-                </ul>
+                </ul>-->
               </div>
             </div>
           </div>
