--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
           <div class="row mb-5 align-items-end">
             <div class="col-md-6" data-aos="fade-up">
 
-              <h2>Contact Form</h2>
+              <h2>Contact Us</h2>
               <!--<p class="mb-0">Davinder Singh Davinder Singh budget Web creator adipisicing budget . creatorBudget Web creator budget Web creator incidunt ut officiis explicabo inventore.</p>-->
             </div>
 
@@ -170,7 +170,7 @@
               <div>
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d719098.0947965231!2d-76.45968298537!3d45.2482592204198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b25f5113af%3A0x8a6a51e131dd15ed!2sOttawa%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sin!4v1714310000937!5m2!1sen!2sin"
-                  width="350" height="260" style="border:0;" allowfullscreen="" loading="lazy"
+                  width="100%" height="360" style="border:0;" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
@@ -217,7 +217,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 mr-auto text-center text-md-left mb-5 mb-md-0">
-              <h2>Starts Publishing Your Apps</h2>
+              <h2>Download Gigly  Today</h2>
             </div>
             <div class="col-md-5 text-center text-md-right">
               <p><a href="#" class="btn"><span class="icon la la-apple mr-3"></span>App store</a> <a href="#"
@@ -266,10 +266,10 @@
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
-                <h3>Downloads</h3>
+                <!--<h3>Downloads</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">Get from the Play Store</a></li>
-                </ul>
+                </ul>-->
               </div>
             </div>
           </div>
