--- a/index.html
+++ b/index.html
@@ -576,10 +576,10 @@
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
-                <h3>Downloads</h3>
+                <!--<h3>Downloads</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">Get from the Play Store</a></li>
-                </ul>
+                </ul>-->
               </div>
             </div>
           </div>
