--- a/index.html
+++ b/index.html
@@ -573,6 +573,7 @@
                 <ul class="list-unstyled">
                   <li><a href="team">About Us</a></li>
                   <li><a href="contact">Contact Us</a></li>
+                  <li><a href="terms">Terms and Conditions</a></li>
                 </ul>
               </div>
               <div class="col-md-4 mb-4 mb-md-0">
